fixes run-over text in IE, fixes spacing in print-to-digital

--- a/styles/components/circle/_label.scss
+++ b/styles/components/circle/_label.scss
@@ -1,5 +1,6 @@
 @mixin base() {
     font-size: 2rem;
+    width: 100%;
 }
 
 &__label {
