--- a/styles/components/stats/panels/_stats-1.scss
+++ b/styles/components/stats/panels/_stats-1.scss
@@ -27,6 +27,7 @@
 
     .printer {
         width: 32rem;
+        margin-bottom: 5rem;
 
         @media screen and (min-width: 768px) {
             width: 37rem;
